test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: example-service-ingress 
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
 
spec:
  tls:
    - hosts:
      - cat.terrestrialplatform.link
      - nodered.terrestrialplatform.link
      - grafana.terrestrialplatform.link
      secretName: letsencrypt-prod
  rules:
    - host: grafana.terrestrialplatform.link
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: grafana
   
                port:
   
                  number: 80
    - host: nodered.terrestrialplatform.link
   
      http:
   
        paths:
   
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: nodered-node-red
   
                port:
   
                  number: 1880
   
    - host: cat.terrestrialplatform.link
   
      http:
   
        paths:
   
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: spring-auth-app
   
                port:
   
                  number: 8080
                  
 
                  
          - path: /web/(.*)
            pathType: Prefix
   
            backend:
 
              service:
   
                name: spring-platform-app
   
                port:
   
                  number: 8002
                  
          - path: /alarm/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: spring-alarm-app
   
                port:
   
                  number: 8003
                  
          - path: /tag/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: spring-tag-app
   
                port:
   
                  number: 8004
                  
          - path: /history/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: spring-history-app
   
                port:
   
                  number: 8005  

  ingressClassName: nginx
